refactoring and new error handling
